[gd_scene load_steps=26 format=2]

[ext_resource path="res://OnFootAssets/InsideShip/InsideShip.gd" type="Script" id=1]
[ext_resource path="res://OnFootAssets/InsideShip/FlightChair.png" type="Texture" id=2]
[ext_resource path="res://OnFootAssets/InsideShip/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://OnFootAssets/WalkingPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://OnFootAssets/ShipTileset.tres" type="TileSet" id=5]
[ext_resource path="res://OnFootAssets/Interactable.tscn" type="PackedScene" id=6]
[ext_resource path="res://OnFootAssets/InsideShip/BloodDeposit.png" type="Texture" id=7]
[ext_resource path="res://OnFootAssets/InsideShip/BloodDeposit.gd" type="Script" id=8]
[ext_resource path="res://OnFootAssets/InsideShip/FlightChair.gd" type="Script" id=9]
[ext_resource path="res://OnFootAssets/InsideShip/ShipHealthPod.png" type="Texture" id=10]
[ext_resource path="res://OnFootAssets/InsideShip/Respawner.gd" type="Script" id=11]
[ext_resource path="res://OnFootAssets/Assets/ShipHealthPodZap.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 31 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 1.0
height = 14.0

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 20, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 20, 0, 20, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 40, 0, 20, 10 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 60, 0, 20, 10 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 80, 0, 20, 10 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 12 )
region = Rect2( 100, 0, 20, 10 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 26.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 36 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[node name="Ship" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
show_collision = true
format = 1
tile_data = PoolIntArray( 5, 4, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 4, 0, 65541, 4, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 4, 0, 131077, 4, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 4, 0, 196613, 4, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 4, 0, 262148, 4, 0, 262149, 3, 0, 262150, 3, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 3, 0, 262155, 3, 0, 262156, 4, 0, 327684, 4, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 4, 0, 393220, 4, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 4, 0, 458756, 4, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 4, 0, 524292, 4, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 0, 0, 589828, 4, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 0, 0, 655364, 4, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 4, 0, 720900, 4, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 4, 0, 786436, 4, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 4, 0, 851972, 4, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0 )

[node name="Door" parent="." instance=ExtResource( 3 )]
position = Vector2( 400, 272 )
scale = Vector2( 2, 2 )

[node name="BackupCam" type="Camera2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="YSort" type="YSort" parent="."]

[node name="Respawner" type="Node2D" parent="YSort"]
position = Vector2( 353, 197 )
script = ExtResource( 11 )

[node name="Interactable" parent="YSort/Respawner" instance=ExtResource( 6 )]
position = Vector2( 0, -3 )
player_node = NodePath("../../Player")

[node name="CollisionShape2D" parent="YSort/Respawner/Interactable/Area2D" index="0"]
visible = false
position = Vector2( -3, -4 )
shape = SubResource( 4 )

[node name="Sprite" parent="YSort/Respawner/Interactable" index="1"]
texture = ExtResource( 10 )

[node name="PlatformArea" type="Area2D" parent="YSort/Respawner"]
visible = false
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Respawner/PlatformArea"]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/Respawner"]
visible = false
position = Vector2( -353, -197 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Respawner/StaticBody2D"]
position = Vector2( 353, 196 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="ZapSprite" type="AnimatedSprite" parent="YSort/Respawner"]
position = Vector2( 0, -12 )
frames = SubResource( 13 )
frame = 3
speed_scale = 2.0

[node name="FlightChair" type="Node2D" parent="YSort"]
position = Vector2( 271, 80 )
script = ExtResource( 9 )

[node name="Interactable" parent="YSort/FlightChair" instance=ExtResource( 6 )]
player_node = NodePath("../../Player")
required_story_pos = 1
optional_blacklist_pos = 8
interaction_result = "Fly Ship"

[node name="CollisionShape2D" parent="YSort/FlightChair/Interactable/Area2D" index="0"]
shape = SubResource( 3 )

[node name="Sprite" parent="YSort/FlightChair/Interactable" index="1"]
texture = ExtResource( 2 )

[node name="BloodDeposit" type="Node2D" parent="YSort"]
position = Vector2( 192, 191 )
script = ExtResource( 8 )

[node name="Interactable" parent="YSort/BloodDeposit" instance=ExtResource( 6 )]
player_node = NodePath("../../Player")
interaction_result = "Use Deposit"

[node name="CollisionShape2D" parent="YSort/BloodDeposit/Interactable/Area2D" index="0"]
position = Vector2( 5, 7 )
shape = SubResource( 1 )

[node name="Sprite" parent="YSort/BloodDeposit/Interactable" index="1"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Player" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 276, 152 )
isInRoom = true

[node name="AnimationTree" parent="YSort/Player" index="2"]
parameters/playback = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="YSort/Player"]
zoom = Vector2( 0.5, 0.5 )

[connection signal="player_nearby" from="YSort/Respawner/Interactable" to="YSort/Respawner" method="_on_Interactable_player_nearby"]
[connection signal="body_exited" from="YSort/Respawner/PlatformArea" to="YSort/Respawner" method="_on_PlatformArea_body_exited"]
[connection signal="animation_finished" from="YSort/Respawner/ZapSprite" to="YSort/Respawner" method="_on_ZapSprite_animation_finished"]
[connection signal="interacted_with" from="YSort/FlightChair/Interactable" to="YSort/FlightChair" method="_on_Interactable_interacted_with"]
[connection signal="player_nearby" from="YSort/FlightChair/Interactable" to="YSort/FlightChair" method="_on_Interactable_player_nearby"]
[connection signal="interacted_with" from="YSort/BloodDeposit/Interactable" to="YSort/BloodDeposit" method="_on_Interactable_interacted_with"]
[connection signal="player_nearby" from="YSort/BloodDeposit/Interactable" to="YSort/BloodDeposit" method="_on_Interactable_player_nearby"]

[editable path="Door"]
[editable path="YSort/Respawner/Interactable"]
[editable path="YSort/FlightChair/Interactable"]
[editable path="YSort/BloodDeposit/Interactable"]
[editable path="YSort/Player"]
[editable path="YSort/Player/HitboxPivot/WeaponHitbox"]
[editable path="YSort/Player/HitboxPivot/NetgunHitbox"]
[editable path="YSort/Player/Hurtbox"]
[editable path="YSort/Player/DialogueInteractionArea"]
